# lt25-flame

./: .gitignore  .gitmodules  CLAUDE.md  LT25_README.md  asr_dashboard.py  data.py  demo_stt.py  download_hf.py  infer_stt.py  preprocess_ctc.py  pyproject.toml  train_stt.py  train_stt_dataparallel.py  train_timeseries.py  train_timeseries.sh  visualize_mfcc.py
configs/: hgrn_timeseries.json
flame/: logging_timeseries.py
flame/models/: gpt2_asr.py  hgrn_asr.py  hgrn_asr_ez.py  hgrn_timeseries.py
